[package]
name = "psemudb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = "0.3"
tracing = "0.1.36"
psemu-core = { path = "../psemu-core" }

ratatui = "0.20.0"
crossterm = "0.25"
ansi-to-tui = "3.0.0"